Implemented integration module for JIRA.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>reliability-facade</module>
 		<module>reliability-service</module>
 		<module>reliability-sonar</module>
+                <module>reliability-jira</module>
 		<module>reliability-math-models</module>
 		<module>reliability-dao</module>
 		<module>reliability-model</module>
