--- a/reliability-facade/pom.xml
+++ b/reliability-facade/pom.xml
@@ -29,5 +29,10 @@
 			<artifactId>service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>ua.edu.lp.reliability</groupId>
+			<artifactId>jira</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
