Implemented security module

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
 	<packaging>pom</packaging>
 
 	<modules>
+        <module>reliability-security</module>
 		<module>reliability-webapp</module>
 		<module>reliability-facade</module>
 		<module>reliability-service</module>
 		<module>reliability-sonar</module>
-                <module>reliability-jira</module>
+        <module>reliability-jira</module>
 		<module>reliability-math-models</module>
 		<module>reliability-dao</module>
 		<module>reliability-model</module>
