--- a/reliability-security/pom.xml
+++ b/reliability-security/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>ua.edu.lp.reliability</groupId>
+			<artifactId>service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	<!-- Spring Security  -->
 	<dependency>
         <groupId>org.springframework.security</groupId>
