--- a/reliability-mail/pom.xml
+++ b/reliability-mail/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ua.edu.lp.reliability</groupId>
-	<artifactId>webapp</artifactId>
-	<packaging>war</packaging>
+	<artifactId>mail</artifactId>
+	<packaging>jar</packaging>
 
-	<name>Reliability Web Console</name>
+	<name>Reliability Mail module</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,40 +21,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>ua.edu.lp.reliability</groupId>
-			<artifactId>facade</artifactId>
+			<artifactId>model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>ua.edu.lp.reliability</groupId>
-			<artifactId>security</artifactId>
+			<artifactId>service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>ua.edu.lp.reliability</groupId>
+			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3</version>
+			<version>1.4.7</version>
 		</dependency>
 	</dependencies>
 </project>
