--- a/reliability-webapp/src/main/resources/application.properties
+++ b/reliability-webapp/src/main/resources/application.properties
@@ -7,3 +7,8 @@ db.user=${db.user}
 db.user.password=${db.user.password}
 jpa.database=${jpa.database}
 jpa.showSql=${jpa.showSql}
+
+# Mail service 
+mail.service.host=${mail.service.host}
+mail.service.username=${mail.service.username}
+mail.service.password=${mail.service.password}
